--- a/content/post/2020-05-07-exploring-big-mt-cars-with-python-datatable-and-plotnine.Rmd
+++ b/content/post/2020-05-07-exploring-big-mt-cars-with-python-datatable-and-plotnine.Rmd
@@ -273,7 +273,7 @@ In the result above, we see a lot of challenges if we had hoped to have appropri
 
 # Conclusion
 
-It took us a couple of months to get up and running with `data.table`, and even with daily usage, we are still learning its nuance a year later. We think the up-front investment in learning the syntax, which can be a little confusing  at first, but is worth in the long run. It is also less well documented than `dplyr` or `pandas`. We learned so much about `data.table` from a few blog posts such as [Advanced tips and tricks with data.table]http://brooksandrew.github.io/simpleblog/articles/advanced-data-table/) and [A data.table and dplyr tour](https://atrebas.github.io/post/2019-03-03-datatable-dplyr/). The goal of this post is to help to similarly fill the documentation gap for `datatable`. 
+It took us a couple of months to get up and running with `data.table`, and even with daily usage, we are still learning its nuance a year later. We think the up-front investment in learning the syntax, which can be a little confusing  at first, but is worth in the long run. It is also less well documented than `dplyr` or `pandas`. We learned so much about `data.table` from a few blog posts such as [Advanced tips and tricks with data.table](http://brooksandrew.github.io/simpleblog/articles/advanced-data-table/) and [A data.table and dplyr tour](https://atrebas.github.io/post/2019-03-03-datatable-dplyr/). The goal of this post is to help to similarly fill the documentation gap for `datatable`. 
 
 Python `datatable` is promising, and we are grateful for it as familiar territory as we bridge over to Python. We can't tell how much of our difficulty has been because the package still seems incomplete compared to the mature `data.table` or our weakness with Python. The need to manually set variables for non-standard evaluation, to revert to pandas to accomplish many tasks  or the challenges extracting and filtering data from nested columns. Also, it would be appreciated to seemlessly translate between a `datatable` in Python and `data.table` in R. We have been in awe of the `data.table` team and can only imagine how much goes into maintaining a package like this. In the next post, we will continue to use Big MT Cars data to try out `plotnine`, the Python version of `ggplot`.
 
